2008-01-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.PL: Require unstable GLib, for gperl_sv_defined()

2008-01-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Add overloading for Clutter::Container::ForeachFunc
	invocation.

	* xs/ClutterContainer.xs: Finally wrap the FOREACH virtual
	function of the Clutter::Container interface.

	* xs/ClutterModel.xs:
	* xs/ClutterModelDefault.xs:
	* xs/ClutterModelIter.xs: Wrap more Clutter::Model and
	Clutter::Model::Iter API; still not completely working: requires
	API changes upstream for the append and prepend methods to
	work correctly.

	* t/ClutterModel.t: Add tests for Clutter::Model.

	* maps:
	* MANIFEST:
	* xs_files: Add new files

2007-12-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* MANIFEST:
	* maps:
	* xs_files:
	* xs/ClutterModel.xs: Initial bindings for Clutter::Model.

	* t/ClutterModel.t: Test suite for Clutter::Model API.

2007-12-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterBehaviourEllipse.xs: Use the mPUSH?() macros to
	avoid the sv_2mortal(newSV?v()) tediousness.

	* t/ClutterBehaviourEllipse.t: Fix the alignment.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterActor.xs:
	* xs/ClutterAlpha.xs:
	* xs/ClutterBehaviour.xs:
	* xs/ClutterUnits.xs: Even more documentation.

	* examples/behaviour.pl: Use a custom alpha function, and exercise
	the Clutter::Timeline->get_progress() API at the same time.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterActor.xs: Port some of the C API documentation
	and description to the Perl bindings.

	* examples/script.pl: Remove a useless signal handler definition.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterScript.xs: Fix documentation

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* MANIFEST: Update

	* xs/ClutterScript.xs: Actually add ClutterScript bindings
	to the repository.

	* examples/script.pl: Example code for both ClutterScript
	and ClutterScore.
